--- a/src/css/test.css
+++ b/src/css/test.css
@@ -18,3 +18,50 @@
   .scrolled {
     background-color: var(--third-color);
   }
+
+  #header nav {
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    height: 10vh;
+  
+  }
+  #banner-register {
+    margin-top: 5rem;
+    background-image: url("../img/argentina-world.jpg");
+    background-size: cover;
+    background-position: top;
+    height: 77vh;
+    box-shadow: inset 0 0 0 2000px rgba(84, 84, 84, 0.5);
+  
+    /* color: white; */
+  
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* text-align: center; */
+  }
+
+  .input-search {
+    background-color: var(--bg-input-color);
+    border: 2px solid white;
+    border-radius: 25px;
+    color: white;
+    font-size: 16px;
+    height: 50px;
+    margin: 20px 0px;
+    outline: none;
+    padding: 0px 20px;
+    width: 70%;
+    font-family: "Nunito", sans-serif;
+  }
+
+  #search {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
