--- a/src/css/partials/banner.css
+++ b/src/css/partials/banner.css
@@ -56,10 +56,22 @@ y series ilimitadas */
 
 .card-banner h1 {
     color: #fff;
-    font-size: 4vw;
+    font-size: 5.2vw;
+    font-weight: 800;
     margin-top: 2rem;
     margin-bottom: 3rem;
     /* margin-bottom: 3rem; */
+    /* mask-image: linear-gradient(to bottom, rgba(0, 0, 200, 0.4), rgba(0, 0, 200, 1)); */
+    /* stroke: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 200, 1)), to(rgba(0, 0, 200, 1)));     */
+    /* stroke:rgba(0, 0, 200, 1) */
+    /* si funciona */
+    /* background: -webkit-linear-gradient(rgb(77, 149, 207), #93CBEB); */
+    /* background: linear-gradient(to bottom, rgba(0, 0, 200, 0.1), rgba(0, 0, 0, 200.9)); */
+    background: linear-gradient(90deg, #93CBEB, rgb(255, 255, 255));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1px black;
+    /* color: linear-gradient(to bottom, rgba(0, 0, 200, 0.4), rgba(0, 0, 200, 1)); */
 }
 
 .card-banner h2 {
