--- a/src/css/partials/header.css
+++ b/src/css/partials/header.css
@@ -193,6 +193,7 @@ repetitivo, mejorando la interacción visual cuando se interactúa con ese eleme
   /* -webkit-box-reflect: below -2px linear-gradient(to button, transparent, rgba(0,0,0,0.8)); */
   /* background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); */
   /* opacity: linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,1)); */
+  /* este no deberia funcionar */
   /* -webkit-mask-image: -webkit-gradient(linear, top, bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 1))); */
 }
 
