--- a/src/css/partials/base.css
+++ b/src/css/partials/base.css
@@ -5,8 +5,11 @@
     --GradienteCelesteBlanco: linear-gradient(0deg,
             rgba(255, 255, 255) 0%,
             rgba(117, 170, 219) 100%);
-    --GradienteBlancoCeleste: linear-gradient(0deg,
+    /* --GradienteBlancoCeleste: linear-gradient(90deg,
             rgba(117, 170, 219) 0%,
+            rgba(255, 255, 255) 100%); */
+    --GradienteBlancoCeleste: linear-gradient(90deg,
+            #74ACDF 0%,
             rgba(255, 255, 255) 100%);
     --celeste: rgba(117, 170, 219);
     --celesteMasClaro: #3ac3e8;
