tranform of the header

--- a/src/css/partials/banner.css
+++ b/src/css/partials/banner.css
@@ -1,5 +1,5 @@
 #banner {
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     background-image: url("../../img/argentina-world.jpg");
     background-size: cover;
     background-position: top;
