--- a/src/css/partials/header.css
+++ b/src/css/partials/header.css
@@ -86,7 +86,7 @@ que las reglas señaladas con el selector general, por eso se usa clase*/
   /* height: 60px; */
   max-width: 1200px;
   padding: 0 20px;
-  margin: 0 auto;
+  /* margin: 0 0; */
 }
 #logo a {
   display: flex;
@@ -96,7 +96,7 @@ que las reglas señaladas con el selector general, por eso se usa clase*/
   color: var(--azulClaro);
   font-weight: bold;
   font-size: 1.2rem;
-  /* margin-left: 2rem; */
+  margin-left: 2rem;
 }
 .logo-text{
   /* -webkit-text-stroke: 0.2px white; */
