--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- vinculación con estilos y favicon -->
-        <link rel="stylesheet" href="../static/css/style.css" />
-        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+        <!-- <link rel="stylesheet" href="../static/css/style.css" /> -->
+        <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
         <title>Campeones del Mundo</title>
         <!-- vinculación con google-fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,6 +14,7 @@
           href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
           rel="stylesheet"
         />
+        <link rel="stylesheet" href="../css/home.css" />
     
         <!-- vinculación fontawesome -->
         <script
@@ -23,15 +24,17 @@
       </head>
     <body>
  <!-- Encabezado -->
- <header class="header" id="header-register">
-    <nav>
+ <header class="header">
+  <nav class="menu">
       <!-- Logo -->
       <div id="logo">
         <a href="/">
-          <!-- <i class="fa-solid fa-futbol"></i> -->
-          
+                
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
-          <img src="../static/img/Golden-Sta.png" alt="logo Estrellas">
+          <div class="icon_logo_container"></div>
+            <img src="../img/Golden-Sta.png" class="icon_logo" alt="imagen de 3 Estrellas">
+            <!-- <img src="../img/Golden-Sta.png" class="logo_logo_reflejo" alt="imagen de 3 Estrellas"> -->
+          </div>
         </a>
       </div>
 
