--- a/src/css/home.css
+++ b/src/css/home.css
@@ -6,6 +6,7 @@
 @import url("./partials/presentacion.css");
 @import url("./partials/footer.css");
 @import url("./test.css");
+@import url("./partials/form_register.css");
 
 body {
     background-color: var(--GradienteBlancoCeleste);
