--- a/src/css/partials/footer.css
+++ b/src/css/partials/footer.css
@@ -1,4 +1,4 @@
-#footer {
+/* #footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,4 +21,112 @@
     text-decoration: underline;
     color: blue;
 }
+ */
+.footer-container {
+    background: var(--GradienteCelesteBlanco);
+}
 
+.footer {
+    display: flex;
+    /* justify-content: space-evenly; */
+    justify-content: space-around;
+    /* align-items: center; */
+    /* background-color: #699A04; */
+    /* background-color: #323030; */
+    /* border-radius: 30px 30px 0 0; */
+    /* padding: 20px 0; */
+}
+
+.footer strong {
+    font-size: 20px;
+    display: block;
+    padding: 20px 0;
+    color: black;
+    /* align-content: flex-end; */
+}
+
+.footer p {
+    margin: auto 0;
+    font-size: 16px;
+    font-weight: bolder;
+    /* display: block; */
+    padding: 0 20px 20px 0px;
+    color: black;
+    /* background-color: red; */
+}
+
+.lista-iconos {
+    margin: auto 0;
+}
+
+[class^='social-'] {
+    display: inline-block;
+    /* background-color: white; */
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 10px;
+    border: none;
+    box-sizing: border-box;
+    margin: 10px;
+}
+
+.footer .social-1 {
+    background-size: 20px;
+    background-image: url("../../icons/face.svg");
+    /* margin-left: 0; */
+}
+
+.footer .social-2 {
+    background-size: 40px;
+    background-image: url("../../icons/insta.svg");
+}
+
+.footer .social-3 {
+    background-size: 40px;
+    background-image: url("../../icons/envelope.svg");
+}
+
+.footer .social-4 {
+    background-size: 40px;
+    background-image: url("../../icons/twitter.svg");
+}
+
+.footer .social-5 {
+    background-size: 40px;
+    background-image: url("../../icons/icon-what.png");
+}
+
+.col-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* .footer  */
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: space-evenly; */
+}
+
+.col-3 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    border-collapse: collapse;
+    /* justify-content: space-evenly; */
+    padding-bottom: 10px;
+}
+
+.col-3 img {
+    display: flex;
+    border-radius: 16px;
+    height: 60px;
+    margin: auto 0;
+    /* padding: 10px 0; */
+    padding-bottom: 10px;
+}
