--- a/src/views/iniciar-sesion.html
+++ b/src/views/iniciar-sesion.html
@@ -33,9 +33,9 @@
       <!-- hipervínculos del menú -->
       <ul class="listaNav">
         <li><a class="lista" href="../index.html#card-banner container">Inicio</a></li>
-        <li><a class="lista" href="../index.html#galeria">Galería</a></li>
-        <li><a class="lista" href="../index.html#productos">Productos</a></li>
-        <li><a class="lista" href="../index.html#quienes-somos">Quienes Somos</a></li>
+        <li><a class="lista" href="./galeria.html">Galería</a></li>
+        <li><a class="lista" href="./productos.html">Productos</a></li>
+        <li><a class="lista" href="./quienes-somos.html">Quienes Somos</a></li>
         <li><a class="lista" href="./contacto.html">Contacto</a></li>
         <li>
           <a class="linkNav Login" href="./iniciar-sesion.html">Login</a>
