--- a/src/views/register.html
+++ b/src/views/register.html
@@ -38,10 +38,10 @@
       <!-- hipervínculos del menú -->
       <ul class="listaNav">
         <li><a class="lista" href="#">Inicio</a></li>
-        <li><a class="lista" href="#galeria">Galería</a></li>
-        <li><a class="lista" href="#productos">Productos</a></li>
-        <li><a class="lista" href="#quienes-somos">Quienes Somos</a></li>
-        <li><a class="lista" href="./views/contacto.html">Contacto</a></li>
+        <li><a class="lista" href="./galeria.html">Galería</a></li>
+        <li><a class="lista" href="./productos.html">Productos</a></li>
+        <li><a class="lista" href="./quienes-somos.html">Quienes Somos</a></li>
+        <li><a class="lista" href="./contacto.html">Contacto</a></li>
         <li class="sub_menu">
           <a class="linkNav Login lista" href="#">Login</a>
           <!-- menu desplegable -->
