--- a/src/views/contacto.html
+++ b/src/views/contacto.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- vinculación con estilos y favicon -->
-  {% comment %}
-  <link rel="stylesheet" href="../static/css/style.css" /> {% endcomment %}
+  <!-- {% comment %} -->
+  <link rel="stylesheet" href="../static/css/style.css" /> 
+  <!-- {% endcomment %} -->
   <link rel="stylesheet" href="../css/contacto.css" />
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   <title>Campeones del Mundo</title>
   <!-- vinculación con google-fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,8 +32,8 @@
 
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
           <div class="icon_logo_container">
-            <img src="./img/Golden-Sta.png" class="icon_logo" alt="imagen de 3 Estrellas">
-            <img src="./img/Golden-Sta.png" class="logo_logo_reflejo" alt="imagen de 3 Estrellas">
+            <img src="../img/Golden-Sta.png" class="icon_logo" alt="imagen de 3 Estrellas">
+            <img src="../img/Golden-Sta.png" class="logo_logo_reflejo" alt="imagen de 3 Estrellas">
           </div>
         </a>
       </div>
