--- a/src/views/galeria.html
+++ b/src/views/galeria.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- vinculación con estilos y favicon -->
-  <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon" />
   <title>Campeones del Mundo</title>
+  <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon" />
   <!-- vinculación con google-fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="./css/home.css" />
+  <link rel="stylesheet" href="../css/contacto.css" />
 
   <!-- vinculación fontawesome -->
   <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
