--- a/src/views/register.html
+++ b/src/views/register.html
@@ -37,11 +37,11 @@
       </div>
       <!-- hipervínculos del menú -->
       <ul class="listaNav">
-        <li><a class="lista" href="#">Inicio</a></li>
-        <li><a class="lista" href="./galeria.html">Galería</a></li>
-        <li><a class="lista" href="./productos.html">Productos</a></li>
-        <li><a class="lista" href="./quienes-somos.html">Quienes Somos</a></li>
-        <li><a class="lista" href="./contacto.html">Contacto</a></li>
+        <li><a class="lista" href="../index.html#">Inicio</a></li>
+        <li><a class="lista" href="../index.html#galeria">Galería</a></li>
+        <li><a class="lista" href="../index.html#productos">Productos</a></li>
+        <li><a class="lista" href="../index.html#quienes-somos">Quienes Somos</a></li>
+        <li><a class="lista" href="../views/contacto.html">Contacto</a></li>
         <li class="sub_menu">
           <a class="linkNav Login lista" href="#">Login</a>
           <!-- menu desplegable -->
@@ -50,10 +50,10 @@
               <!-- <div class="sub_menu_aux_2"> -->
               <ul class="dropdown-content">
                 <li class="listaItem">
-                  <a class="lista" href="./views/iniciar-sesion.html">Iniciar sesión</a>
+                  <a class="lista" href="../views/iniciar-sesion.html">Iniciar sesión</a>
                 </li>
                 <li class="listaItem">
-                  <a class="lista" href="./views/register.html">Registrarse</a>
+                  <a class="lista" href="../views/register.html">Registrarse</a>
                 </li>
               </ul>
             </div>
